<?xml version="1.0"?>
<package>
  <name>ahl_robot_msgs</name>
  <version>0.0.0</version>
  <description>The ahl_robot_msgs package</description>
  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_robot_msgs</url> -->
  <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
