<?xml version="1.0"?>
<package>
  <name>ahl_youbot_sample</name>
  <version>0.0.0</version>
  <description>The ahl_youbot_sample package</description>
  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>LGPL</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_youbot_sample</url> -->
  <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>youbot_driver</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>youbot_driver</run_depend>
</package>
